...
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="takePhoto">Take Photo</string>
    <string name="retakePhoto">Retake Photo</string>
    <string name="take_photo_of_result">Take a photo of the result</string>
    <string name="take_photo_meter_result">Take a photo of the measured result on the device</string>
    <string name="enter_measured_value">Enter the measured value</string>

    <string name="sd_on">Press briefly (*sd_on_off*) to turn device on.</string>
...
    <string name="pt_add_reagent_2">Add the DPD No.1 tablet directly from the foil into the right (Cl DPD) compartment. Avoid touching the reagent tablets.</string>
    <string name="pt_close_shake">Close the box with the lid and shake until the reagents are dissolved. Be sure to place the lid correctly with the arrow facing you.</string>
    <string name="select_color_intervals">Select colour intervals</string>
    <string name="color_intervals">Color intervals</string>
    <string name="select_colors_before_continue">Select the colour intervals before continuing</string>

    <string name="checkit_comparator_uses">The Checkit Comparator uses two cells and a coloured disc.</string>
    <string name="insert_colored_disk">Insert the coloured disc in the comparator.</string>
    <string name="add_one_tablet_to_other_cell">Add one %reagent1 tablet to the other cell, and close it with a lid. Swirl the cell until the reagent is completely dissolved</string>
    <string name="add_one_powder_to_other_cell">Add one %reagent1 powder pack to the other cell, and close it with a lid. Swirl the cell until the reagent is completely dissolved</string>
    <string name="match_colors_by_rotating">By rotating the disc, match the two colours against daylight, looking AWAY from the sun.</string>
    <string name="rinse_vial_sample">Rinse the vial with the water sample.</string>

    <!--Nitrate Checkit-->
    <string name="fill_nitrate_tube">Fill the Nitrate Test Tube to the 20 ml mark.</string>
    <string name="add_one_level_spoon">Add one level spoon full %reagent1 Powder and a %reagent2 Tablet to the Test Tube. <b>Don\'t crush the tablet!</b></string>
    <string name="close_with_lid_shake">Close it with a lid and shake for <b>1 minute</b>.</string>
...
    <string name="match_colors_by_rotating_angle">Hold the comparator at an angle so that enough north daylight goes through the cell. The mirror unit makes use of the view through the entire length of the cell.</string>
    <string name="rinse_cells">It is essential to rinse the cells thoroughly after each test.</string>
    <string name="store_dark">Store CHECKIT® Disc in the dark.</string>
    <string name="round_off_test">Round off test</string>
    <string name="ph_coloration"><b>Note</b>: pH values below 4 produce always a red colouration. pH values above 10 produce always a purple colouration.</string>
    <string name="fill_one_cell">Fill one cell to the 10 ml mark  with the water sample.</string>
    <string name="fill_both_cells">Fill both cells to the 10 ml mark with the water sample.</string>
    <string name="fill_other_cell_deionized">Fill the other cell with deionized water to the 10ml mark.</string>
    <string name="close_the_cell">Close the cell with a lid and place it facing the mark (point) in the left-hand space of the comparator. It acts as a blank.</string>
    <string name="close_one_cell">Close one cell with a lid and place it facing the mark (point) in the left-hand space of the comparator. It acts as a blank.</string>
    <string name="place_sample_left_space">Place the cell with the water sample facing the mark (point) in the left-hand space of the comparator.</string>
    <string name="place_deionized_right_space">Place the cell with the deionized water facing the mark (point) in the right-hand space of the comparator.</string>
    <string name="place_cell_right_space">Place this cell facing the mark (point) in the right-hand space of the comparator.</string>
    <string name="place_second_cell">Place the second cell facing the mark (point) in the right-hand space of the comparator.</string>
    <string name="sd_50_dip_sample_1">Remove protective cap, rinse the electrode with distilled water.</string>
    <string name="sd_50_dip_sample_2">Immerse the instrument into the sample so that the instrument is submersed to the sealing ring level. Stir the sensor gently while it is in the sample.</string>
    <string name="sd_50_dip_sample_3">Press briefly (*sd_on_off*) to freeze / unfreeze the measurement.</string>
    <string name="sd_maintenance"><b>Note</b>: Regularly check the calibration of the device and recalibrate if necessary. For calibration instructions: see the product manual in the box.</string>
    <string name="sd_70_dip_sample_1">Remove protective cap, rinse the sensor with the water sample.</string>
    <string name="sd_70_dip_sample_2">Immerse the instrument into the sample so that the instrument is submersed to the sealing ring level. Press briefly (*sd_on_off*) to freeze / unfreeze the measurement.</string>
...
