...
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:gravity="center_horizontal">

            <Button
                android:id="@+id/buttonSubmit"
                style="@style/Button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:enabled="true"
                android:text="@string/submitResult"
                android:theme="?primaryButtonStyle"
                android:visibility="gone" />

            <Button
                android:id="@+id/buttonClose"
                style="@style/Button"
...
